--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MyWinxinTest</string>
+    <string name="app_name">毕业论文指导系统</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
