--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">毕业论文指导系统</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="button_login">登  陆</string>
+    <string name="button_teacher">教师入口</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="editText_userName">请输入用户名</string>
+    <string name="editText_password">请输入密码</string>
 
 </resources>
