在论文的fragment里加了两个按钮, 为了在程序获取这两个按钮用了许多时间, 最后在fragment的onCreateView里用inflate回来的rootView来获取控件. 另外换了logo, 不记得前面的版本有没有提交到, 反正是换了, 是 阿克安琪儿 p的图

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="editText_userName">请输入用户名</string>
     <string name="editText_password">请输入密码</string>
+    <string name="button_view_select">查看课题</string>
+    <string name="button_view_result">查看选题结果</string>
 
 </resources>
