更改了论文浏览的布局, 本来有几个child, 现在一个就好了, 下面加了留言和选题的按钮. ListView里的getView里的convertView好像是指上一个调用getView时inflate的布局, 因为通常是重复的所以可以复用.

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="radioButton_chat">通讯</string>
     <string name="radioButton_group">小组</string>
     <string name="radioButton_me">我</string>
+    <string name="button_leave_message">留言</string>
+    <string name="button_submit">提  交</string>
 
 </resources>
