调整UI, 登陆Activity的EditText改成圆角, 按钮背景用selector, selector里面有shape, 如果selector嵌shape时想只用颜色做背景, 可以在shape里用solid标签设置, 而不是在Item里用color. 调整提交按钮与ScrollView的位置, 本来按钮会挡住ScrollView的最后一项. 方法比较蠢, 设置了ScrollView的margin. 还有之前的选题按钮的文字错了, 写成了「提交」, 改正为「选题」.

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="radioButton_me">我</string>
     <string name="button_leave_message">留言</string>
     <string name="button_submit">提  交</string>
+    <string name="button_select">选  题</string>
 
 </resources>
