--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -33,5 +33,7 @@
     <string name="title_activity_teacher_login">TeacherLoginActivity</string>
     <string name="button_teacher_login">教师登陆</string>
     <string name="back">返回</string>
+    <string name="title_activity_teacher_main">TeacherMainActivity</string>
+    <string name="title_activity_select_student">SelectStudentActivity</string>
 
 </resources>
