1. 调整UI, 全部换上自定义的adapter. 2. ChecBox别用OnCheckedListener, 随便划一下就调用, 用OnClickListener就好.

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="button_login">登  陆</string>
     <string name="button_teacher">教师入口</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="editText_userName">请输入用户名</string>
+    <string name="editText_userName">请输入学号/工号</string>
     <string name="editText_password">请输入密码</string>
     <string name="button_view_select">查看课题</string>
     <string name="button_view_result">查看选题结果</string>
