--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="back">返回</string>
     <string name="title_activity_teacher_main">TeacherMainActivity</string>
     <string name="title_activity_select_student">SelectStudentActivity</string>
+    <string name="loading">正在加载...</string>
 
 </resources>
