1. 更改LoginActivity的Handler, 使用static内部类. 2. 增加自动登陆功能, 在数据库中保存账号信息

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="title_activity_teacher_main">TeacherMainActivity</string>
     <string name="title_activity_select_student">SelectStudentActivity</string>
     <string name="loading">正在加载...</string>
+    <string name="button_logout">注销</string>
 
 </resources>
