1. 新加入一个叫message的table, 保存推送过来的消息, 跟原来相比增加了发送者属性; 新增MessageDao, 数据库和Dao都改成了单例模式, 接口和实现接口类的名字都改了 2. 换了个返回图标, 原来里面有的我没看到, 白p了 3. 新增账号注册, 反注册还没有写到注销按钮里 4. 新增MessageBean, 以后显示用 其实我做了挺多的, 虽然没上传......

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="button_view_select">查看课题</string>
     <string name="button_view_result">查看选题结果</string>
     <string name="radioButton_thesis">选题</string>
-    <string name="radioButton_chat">通讯</string>
+    <string name="radioButton_chat">信息</string>
     <string name="radioButton_group">小组</string>
     <string name="radioButton_me">我</string>
     <string name="button_leave_message">留言</string>
@@ -37,5 +37,6 @@
     <string name="title_activity_select_student">SelectStudentActivity</string>
     <string name="loading">正在加载...</string>
     <string name="button_logout">注销</string>
+    <string name="title_activity_message">MessageActivity</string>
 
 </resources>
