--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="loading">正在加载...</string>
     <string name="button_logout">注销</string>
     <string name="title_activity_message">MessageActivity</string>
+    <string name="message_detail">消息详情</string>
 
 </resources>
