--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">毕业论文指导系统</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="button_login">登  陆</string>
+    <string name="button_login">登  录</string>
     <string name="button_teacher">教师入口</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="editText_userName">请输入学号/工号</string>
@@ -31,7 +31,7 @@
     <string name="third_choice">第三志愿</string>
     <string name="teacher_entry">教师入口</string>
     <string name="title_activity_teacher_login">TeacherLoginActivity</string>
-    <string name="button_teacher_login">教师登陆</string>
+    <string name="button_teacher_login">教师登录</string>
     <string name="back">返回</string>
     <string name="title_activity_teacher_main">TeacherMainActivity</string>
     <string name="title_activity_select_student">SelectStudentActivity</string>
