--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -35,9 +35,10 @@
     <string name="back">返回</string>
     <string name="title_activity_teacher_main">TeacherMainActivity</string>
     <string name="title_activity_select_student">SelectStudentActivity</string>
-    <string name="loading">正在加载...</string>
+    <string name="loading">正在加载&#8230;</string>
     <string name="button_logout">注销</string>
     <string name="title_activity_message">MessageActivity</string>
     <string name="message_detail">消息详情</string>
+    <string name="refresh">刷新</string>
 
 </resources>
