1. 增加加密模块, 密码加密后再保存在数据库. 2. 把选课接口改好. 3. 添加查看已选课题界面.

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -40,5 +40,9 @@
     <string name="title_activity_message">MessageActivity</string>
     <string name="message_detail">消息详情</string>
     <string name="refresh">刷新</string>
+    <string name="textView_selected">已选课题：</string>
+    <string name="button_reSelect">更改选题</string>
+    <string name="button_myList">已选课题</string>
+    <string name="title_activity_selected_thesis">SelectedThesisActivity</string>
 
 </resources>
