1. ExpanableListview更改, 只能打开一项, 其他collapse 2. 教师的课程接口改了, 是URL改了 3. 完善 新增/修改 论文题目的界面 其实我今天都没做啥.......

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -43,6 +43,10 @@
     <string name="textView_selected">已选课题：</string>
     <string name="button_reSelect">更改选题</string>
     <string name="button_myList">已选课题</string>
-    <string name="title_activity_selected_thesis">SelectedThesisActivity</string>
+    <string name="title_activity_selected_thesis">已选课题</string>
+    <string name="title_activity_edit_thesis">编辑课题</string>
+    <string name="textView_thesisName">论文题目</string>
+    <string name="textView_count">人数限制</string>
+    <string name="textView_detail">详细信息</string>
 
 </resources>
