--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -56,5 +56,6 @@
     <string name="notification_content">通知正文</string>
     <string name="button_chat">组内交流</string>
     <string name="title_activity_chat">ChatActivity</string>
+    <string name="upload">上传文件</string>
 
 </resources>
