我也不知道改了什么, 大概是加了个莫名其妙的即使通讯吧, 发送到tag tag是tagForTest. 怎样也好了

--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -57,5 +57,7 @@
     <string name="button_chat">组内交流</string>
     <string name="title_activity_chat">ChatActivity</string>
     <string name="upload">上传文件</string>
+    <string name="button_download">下载文件</string>
+    <string name="title_activity_download">DownloadActivity</string>
 
 </resources>
